argc/grammar/Parser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.0 from Parser.y
-----------------------------------------------------------------------------

state 29 contains 7 reduce/reduce conflicts.

terminal TYPE is unused
terminal VIEW is unused
terminal '<-' is unused
terminal '}' is unused
terminal '{' is unused
terminal ']' is unused
terminal '[' is unused
terminal ';' is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parse -> prog                               (0)
	prog -> body                                       (1)
	body -> body decl                                  (2)
	body -> decl                                       (3)
	indentedBody -> INDENT body DEDENT                 (4)
	indentedBody ->                                    (5)
	decl -> def                                        (6)
	decl -> typesig                                    (7)
	decl -> instance                                   (8)
	decl -> class                                      (9)
	decl -> data                                       (10)
	def -> VAR exprlist '=' rhs                        (11)
	def -> VAR '=' rhs                                 (12)
	def -> single OP single '=' rhs                    (13)
	rhs -> expr NEWLINE                                (14)
	rhs -> NEWLINE INDENT expr NEWLINE DEDENT          (15)
	exprlistAux -> single                              (16)
	exprlistAux -> exprlistAux single                  (17)
	exprlist -> exprlistAux                            (18)
	expr -> lambda                                     (19)
	lambda -> singlelambda                             (20)
	singlelambda -> exprlist '=>' expr                 (21)
	singlelambda -> rightoper                          (22)
	rightoper -> oper OPR rightoper                    (23)
	rightoper -> oper                                  (24)
	oper -> oper OP app                                (25)
	oper -> app                                        (26)
	app -> single                                      (27)
	app -> app single                                  (28)
	single -> '(' expr ')'                             (29)
	single -> '(' OP ')'                               (30)
	single -> VAR                                      (31)
	single -> INT                                      (32)
	single -> CHAR                                     (33)
	single -> STRING                                   (34)
	single -> FLOAT                                    (35)
	single -> '_'                                      (36)
	varlistAux -> varlistAux VAR                       (37)
	varlistAux -> VAR                                  (38)
	varlist -> varlistAux                              (39)
	typesig -> VAR typeannotation NEWLINE              (40)
	typesig -> '(' OP ')' typeannotation NEWLINE       (41)
	typeannotation -> ':' constrainedtype              (42)
	constraintlist -> constraint ',' constraintlist    (43)
	constraintlist -> constraint                       (44)
	constraint -> varlist                              (45)
	constrainedtype -> type                            (46)
	constrainedtype -> type ',' constraintlist '=>' type   (47)
	constrainedtype -> type '=>' type                  (48)
	type -> ftype                                      (49)
	ftype -> typeopr '->' ftype                        (50)
	ftype -> typeopr                                   (51)
	typeopr -> typeop OPR typeopr                      (52)
	typeopr -> typeop                                  (53)
	typeop -> typeop OP typeapp                        (54)
	typeop -> typeapp                                  (55)
	typeapp -> typelist                                (56)
	typelistAux -> typelistAux singletype              (57)
	typelistAux -> singletype                          (58)
	typelist -> typelistAux                            (59)
	singletype -> '(' type ')'                         (60)
	singletype -> VAR                                  (61)
	singletype -> '(' ')'                              (62)
	instance -> INSTANCE constrainedtype NEWLINE indentedBody   (63)
	class -> CLASS constrainedtype NEWLINE indentedBody   (64)
	data -> DATA varlist datarhs                       (65)
	datarhs -> '=' constructorsS                       (66)
	datarhs -> NEWLINE INDENT '=' constructorsS DEDENT   (67)
	datarhs -> NEWLINE INDENT gadtconstructors DEDENT   (68)
	constructorsS -> NEWLINE INDENT constructorsB NEWLINE '|' constructorsS DEDENT   (69)
	constructorsS -> NEWLINE INDENT constructorsB NEWLINE INDENT '|' constructorsS DEDENT DEDENT   (70)
	constructorsS -> NEWLINE INDENT constructorsB NEWLINE DEDENT   (71)
	constructorsS -> constructorsB NEWLINE INDENT '|' constructorsS DEDENT   (72)
	constructorsS -> constructorsB NEWLINE '|' constructorsS   (73)
	constructorsS -> constructorsB NEWLINE             (74)
	constructorsB -> constructorsB '|' variant         (75)
	constructorsB -> variant                           (76)
	variant -> VAR typelist                            (77)
	variant -> VAR                                     (78)
	gadtconstructors -> gadtconstructor                (79)
	gadtconstructors -> gadtconstructors gadtconstructor   (80)
	gadtconstructor -> typesig                         (81)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	VAR            { Tident $$ }
	OP             { Toperator $$ }
	OPR            { Troperator $$ }
	CLASS          { Tkeyword "class" }
	DATA           { Tkeyword "data" }
	TYPE           { Tkeyword "type" }
	INSTANCE       { Tkeyword "instance" }
	VIEW           { Tkeyword "view" }
	'|'            { Tpipe }
	':'            { Tcolon }
	'='            { Tequals }
	'->'           { Trarrow }
	'<-'           { Tlarrow }
	'=>'           { Tfatrarrow }
	')'            { Trparen }
	'('            { Tlparen }
	'}'            { Trcurly }
	'{'            { Tlcurly }
	']'            { Trbracket }
	'['            { Tlbracket }
	','            { Tcomma }
	';'            { Tsemicolon }
	'_'            { Tunderscore }
	INDENT         { Tindent }
	DEDENT         { Tdedent }
	NEWLINE        { Tnewline }
	INT            { TintLiteral $$ }
	CHAR           { TcharLiteral $$ }
	STRING         { TstringLiteral $$ }
	FLOAT          { TfloatLiteral $$ }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parse    rule  0
	prog            rule  1
	body            rules 2, 3
	indentedBody    rules 4, 5
	decl            rules 6, 7, 8, 9, 10
	def             rules 11, 12, 13
	rhs             rules 14, 15
	exprlistAux     rules 16, 17
	exprlist        rule  18
	expr            rule  19
	lambda          rule  20
	singlelambda    rules 21, 22
	rightoper       rules 23, 24
	oper            rules 25, 26
	app             rules 27, 28
	single          rules 29, 30, 31, 32, 33, 34, 35, 36
	varlistAux      rules 37, 38
	varlist         rule  39
	typesig         rules 40, 41
	typeannotation  rule  42
	constraintlist  rules 43, 44
	constraint      rule  45
	constrainedtype rules 46, 47, 48
	type            rule  49
	ftype           rules 50, 51
	typeopr         rules 52, 53
	typeop          rules 54, 55
	typeapp         rule  56
	typelistAux     rules 57, 58
	typelist        rule  59
	singletype      rules 60, 61, 62
	instance        rule  63
	class           rule  64
	data            rule  65
	datarhs         rules 66, 67, 68
	constructorsS   rules 69, 70, 71, 72, 73, 74
	constructorsB   rules 75, 76
	variant         rules 77, 78
	gadtconstructors rules 79, 80
	gadtconstructor rule  81

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_parse -> . prog                              (rule 0)

	VAR            shift, and enter state 10
	CLASS          shift, and enter state 11
	DATA           shift, and enter state 12
	INSTANCE       shift, and enter state 13
	'('            shift, and enter state 14
	'_'            shift, and enter state 15
	INT            shift, and enter state 16
	CHAR           shift, and enter state 17
	STRING         shift, and enter state 18
	FLOAT          shift, and enter state 19

	prog           goto state 20
	body           goto state 2
	decl           goto state 3
	def            goto state 4
	single         goto state 5
	typesig        goto state 6
	instance       goto state 7
	class          goto state 8
	data           goto state 9

State 1

	prog -> . body                                      (rule 1)

	VAR            shift, and enter state 10
	CLASS          shift, and enter state 11
	DATA           shift, and enter state 12
	INSTANCE       shift, and enter state 13
	'('            shift, and enter state 14
	'_'            shift, and enter state 15
	INT            shift, and enter state 16
	CHAR           shift, and enter state 17
	STRING         shift, and enter state 18
	FLOAT          shift, and enter state 19

	body           goto state 2
	decl           goto state 3
	def            goto state 4
	single         goto state 5
	typesig        goto state 6
	instance       goto state 7
	class          goto state 8
	data           goto state 9

State 2

	prog -> body .                                      (rule 1)
	body -> body . decl                                 (rule 2)

	VAR            shift, and enter state 10
	CLASS          shift, and enter state 11
	DATA           shift, and enter state 12
	INSTANCE       shift, and enter state 13
	'('            shift, and enter state 14
	'_'            shift, and enter state 15
	INT            shift, and enter state 16
	CHAR           shift, and enter state 17
	STRING         shift, and enter state 18
	FLOAT          shift, and enter state 19
	%eof           reduce using rule 1

	decl           goto state 54
	def            goto state 4
	single         goto state 5
	typesig        goto state 6
	instance       goto state 7
	class          goto state 8
	data           goto state 9

State 3

	body -> decl .                                      (rule 3)

	VAR            reduce using rule 3
	CLASS          reduce using rule 3
	DATA           reduce using rule 3
	INSTANCE       reduce using rule 3
	'('            reduce using rule 3
	'_'            reduce using rule 3
	DEDENT         reduce using rule 3
	INT            reduce using rule 3
	CHAR           reduce using rule 3
	STRING         reduce using rule 3
	FLOAT          reduce using rule 3
	%eof           reduce using rule 3


State 4

	decl -> def .                                       (rule 6)

	VAR            reduce using rule 6
	CLASS          reduce using rule 6
	DATA           reduce using rule 6
	INSTANCE       reduce using rule 6
	'('            reduce using rule 6
	'_'            reduce using rule 6
	DEDENT         reduce using rule 6
	INT            reduce using rule 6
	CHAR           reduce using rule 6
	STRING         reduce using rule 6
	FLOAT          reduce using rule 6
	%eof           reduce using rule 6


State 5

	def -> single . OP single '=' rhs                   (rule 13)

	OP             shift, and enter state 53


State 6

	decl -> typesig .                                   (rule 7)

	VAR            reduce using rule 7
	CLASS          reduce using rule 7
	DATA           reduce using rule 7
	INSTANCE       reduce using rule 7
	'('            reduce using rule 7
	'_'            reduce using rule 7
	DEDENT         reduce using rule 7
	INT            reduce using rule 7
	CHAR           reduce using rule 7
	STRING         reduce using rule 7
	FLOAT          reduce using rule 7
	%eof           reduce using rule 7


State 7

	decl -> instance .                                  (rule 8)

	VAR            reduce using rule 8
	CLASS          reduce using rule 8
	DATA           reduce using rule 8
	INSTANCE       reduce using rule 8
	'('            reduce using rule 8
	'_'            reduce using rule 8
	DEDENT         reduce using rule 8
	INT            reduce using rule 8
	CHAR           reduce using rule 8
	STRING         reduce using rule 8
	FLOAT          reduce using rule 8
	%eof           reduce using rule 8


State 8

	decl -> class .                                     (rule 9)

	VAR            reduce using rule 9
	CLASS          reduce using rule 9
	DATA           reduce using rule 9
	INSTANCE       reduce using rule 9
	'('            reduce using rule 9
	'_'            reduce using rule 9
	DEDENT         reduce using rule 9
	INT            reduce using rule 9
	CHAR           reduce using rule 9
	STRING         reduce using rule 9
	FLOAT          reduce using rule 9
	%eof           reduce using rule 9


State 9

	decl -> data .                                      (rule 10)

	VAR            reduce using rule 10
	CLASS          reduce using rule 10
	DATA           reduce using rule 10
	INSTANCE       reduce using rule 10
	'('            reduce using rule 10
	'_'            reduce using rule 10
	DEDENT         reduce using rule 10
	INT            reduce using rule 10
	CHAR           reduce using rule 10
	STRING         reduce using rule 10
	FLOAT          reduce using rule 10
	%eof           reduce using rule 10


State 10

	def -> VAR . exprlist '=' rhs                       (rule 11)
	def -> VAR . '=' rhs                                (rule 12)
	single -> VAR .                                     (rule 31)
	typesig -> VAR . typeannotation NEWLINE             (rule 40)

	VAR            shift, and enter state 30
	OP             reduce using rule 31
	':'            shift, and enter state 51
	'='            shift, and enter state 52
	'('            shift, and enter state 32
	'_'            shift, and enter state 15
	INT            shift, and enter state 16
	CHAR           shift, and enter state 17
	STRING         shift, and enter state 18
	FLOAT          shift, and enter state 19

	exprlistAux    goto state 21
	exprlist       goto state 48
	single         goto state 49
	typeannotation goto state 50

State 11

	class -> CLASS . constrainedtype NEWLINE indentedBody    (rule 64)

	VAR            shift, and enter state 42
	'('            shift, and enter state 43

	constrainedtypegoto state 47
	type           goto state 34
	ftype          goto state 35
	typeopr        goto state 36
	typeop         goto state 37
	typeapp        goto state 38
	typelistAux    goto state 39
	typelist       goto state 40
	singletype     goto state 41

State 12

	data -> DATA . varlist datarhs                      (rule 65)

	VAR            shift, and enter state 46

	varlistAux     goto state 44
	varlist        goto state 45

State 13

	instance -> INSTANCE . constrainedtype NEWLINE indentedBody    (rule 63)

	VAR            shift, and enter state 42
	'('            shift, and enter state 43

	constrainedtypegoto state 33
	type           goto state 34
	ftype          goto state 35
	typeopr        goto state 36
	typeop         goto state 37
	typeapp        goto state 38
	typelistAux    goto state 39
	typelist       goto state 40
	singletype     goto state 41

State 14

	single -> '(' . expr ')'                            (rule 29)
	single -> '(' . OP ')'                              (rule 30)
	typesig -> '(' . OP ')' typeannotation NEWLINE      (rule 41)

	VAR            shift, and enter state 30
	OP             shift, and enter state 31
	'('            shift, and enter state 32
	'_'            shift, and enter state 15
	INT            shift, and enter state 16
	CHAR           shift, and enter state 17
	STRING         shift, and enter state 18
	FLOAT          shift, and enter state 19

	exprlistAux    goto state 21
	exprlist       goto state 22
	expr           goto state 23
	lambda         goto state 24
	singlelambda   goto state 25
	rightoper      goto state 26
	oper           goto state 27
	app            goto state 28
	single         goto state 29

State 15

	single -> '_' .                                     (rule 36)

	VAR            reduce using rule 36
	OP             reduce using rule 36
	OPR            reduce using rule 36
	'='            reduce using rule 36
	'=>'           reduce using rule 36
	')'            reduce using rule 36
	'('            reduce using rule 36
	'_'            reduce using rule 36
	NEWLINE        reduce using rule 36
	INT            reduce using rule 36
	CHAR           reduce using rule 36
	STRING         reduce using rule 36
	FLOAT          reduce using rule 36


State 16

	single -> INT .                                     (rule 32)

	VAR            reduce using rule 32
	OP             reduce using rule 32
	OPR            reduce using rule 32
	'='            reduce using rule 32
	'=>'           reduce using rule 32
	')'            reduce using rule 32
	'('            reduce using rule 32
	'_'            reduce using rule 32
	NEWLINE        reduce using rule 32
	INT            reduce using rule 32
	CHAR           reduce using rule 32
	STRING         reduce using rule 32
	FLOAT          reduce using rule 32


State 17

	single -> CHAR .                                    (rule 33)

	VAR            reduce using rule 33
	OP             reduce using rule 33
	OPR            reduce using rule 33
	'='            reduce using rule 33
	'=>'           reduce using rule 33
	')'            reduce using rule 33
	'('            reduce using rule 33
	'_'            reduce using rule 33
	NEWLINE        reduce using rule 33
	INT            reduce using rule 33
	CHAR           reduce using rule 33
	STRING         reduce using rule 33
	FLOAT          reduce using rule 33


State 18

	single -> STRING .                                  (rule 34)

	VAR            reduce using rule 34
	OP             reduce using rule 34
	OPR            reduce using rule 34
	'='            reduce using rule 34
	'=>'           reduce using rule 34
	')'            reduce using rule 34
	'('            reduce using rule 34
	'_'            reduce using rule 34
	NEWLINE        reduce using rule 34
	INT            reduce using rule 34
	CHAR           reduce using rule 34
	STRING         reduce using rule 34
	FLOAT          reduce using rule 34


State 19

	single -> FLOAT .                                   (rule 35)

	VAR            reduce using rule 35
	OP             reduce using rule 35
	OPR            reduce using rule 35
	'='            reduce using rule 35
	'=>'           reduce using rule 35
	')'            reduce using rule 35
	'('            reduce using rule 35
	'_'            reduce using rule 35
	NEWLINE        reduce using rule 35
	INT            reduce using rule 35
	CHAR           reduce using rule 35
	STRING         reduce using rule 35
	FLOAT          reduce using rule 35


State 20

	%start_parse -> prog .                              (rule 0)

	%eof           accept


State 21

	exprlistAux -> exprlistAux . single                 (rule 17)
	exprlist -> exprlistAux .                           (rule 18)

	VAR            shift, and enter state 30
	'='            reduce using rule 18
	'=>'           reduce using rule 18
	'('            shift, and enter state 32
	'_'            shift, and enter state 15
	INT            shift, and enter state 16
	CHAR           shift, and enter state 17
	STRING         shift, and enter state 18
	FLOAT          shift, and enter state 19

	single         goto state 83

State 22

	singlelambda -> exprlist . '=>' expr                (rule 21)

	'=>'           shift, and enter state 82


State 23

	single -> '(' expr . ')'                            (rule 29)

	')'            shift, and enter state 81


State 24

	expr -> lambda .                                    (rule 19)

	')'            reduce using rule 19
	NEWLINE        reduce using rule 19


State 25

	lambda -> singlelambda .                            (rule 20)

	')'            reduce using rule 20
	NEWLINE        reduce using rule 20


State 26

	singlelambda -> rightoper .                         (rule 22)

	')'            reduce using rule 22
	NEWLINE        reduce using rule 22


State 27

	rightoper -> oper . OPR rightoper                   (rule 23)
	rightoper -> oper .                                 (rule 24)
	oper -> oper . OP app                               (rule 25)

	OP             shift, and enter state 79
	OPR            shift, and enter state 80
	')'            reduce using rule 24
	NEWLINE        reduce using rule 24


State 28

	oper -> app .                                       (rule 26)
	app -> app . single                                 (rule 28)

	VAR            shift, and enter state 30
	OP             reduce using rule 26
	OPR            reduce using rule 26
	')'            reduce using rule 26
	'('            shift, and enter state 32
	'_'            shift, and enter state 15
	NEWLINE        reduce using rule 26
	INT            shift, and enter state 16
	CHAR           shift, and enter state 17
	STRING         shift, and enter state 18
	FLOAT          shift, and enter state 19

	single         goto state 78

State 29

	exprlistAux -> single .                             (rule 16)
	app -> single .                                     (rule 27)

	VAR            reduce using rule 27
			(reduce using rule 16)

	OP             reduce using rule 27
	OPR            reduce using rule 27
	'=>'           reduce using rule 16
	')'            reduce using rule 27
	'('            reduce using rule 27
			(reduce using rule 16)

	'_'            reduce using rule 27
			(reduce using rule 16)

	NEWLINE        reduce using rule 27
	INT            reduce using rule 27
			(reduce using rule 16)

	CHAR           reduce using rule 27
			(reduce using rule 16)

	STRING         reduce using rule 27
			(reduce using rule 16)

	FLOAT          reduce using rule 27
			(reduce using rule 16)



State 30

	single -> VAR .                                     (rule 31)

	VAR            reduce using rule 31
	OP             reduce using rule 31
	OPR            reduce using rule 31
	'='            reduce using rule 31
	'=>'           reduce using rule 31
	')'            reduce using rule 31
	'('            reduce using rule 31
	'_'            reduce using rule 31
	NEWLINE        reduce using rule 31
	INT            reduce using rule 31
	CHAR           reduce using rule 31
	STRING         reduce using rule 31
	FLOAT          reduce using rule 31


State 31

	single -> '(' OP . ')'                              (rule 30)
	typesig -> '(' OP . ')' typeannotation NEWLINE      (rule 41)

	')'            shift, and enter state 77


State 32

	single -> '(' . expr ')'                            (rule 29)
	single -> '(' . OP ')'                              (rule 30)

	VAR            shift, and enter state 30
	OP             shift, and enter state 76
	'('            shift, and enter state 32
	'_'            shift, and enter state 15
	INT            shift, and enter state 16
	CHAR           shift, and enter state 17
	STRING         shift, and enter state 18
	FLOAT          shift, and enter state 19

	exprlistAux    goto state 21
	exprlist       goto state 22
	expr           goto state 23
	lambda         goto state 24
	singlelambda   goto state 25
	rightoper      goto state 26
	oper           goto state 27
	app            goto state 28
	single         goto state 29

State 33

	instance -> INSTANCE constrainedtype . NEWLINE indentedBody    (rule 63)

	NEWLINE        shift, and enter state 75


State 34

	constrainedtype -> type .                           (rule 46)
	constrainedtype -> type . ',' constraintlist '=>' type    (rule 47)
	constrainedtype -> type . '=>' type                 (rule 48)

	'=>'           shift, and enter state 73
	','            shift, and enter state 74
	NEWLINE        reduce using rule 46


State 35

	type -> ftype .                                     (rule 49)

	'=>'           reduce using rule 49
	')'            reduce using rule 49
	','            reduce using rule 49
	NEWLINE        reduce using rule 49


State 36

	ftype -> typeopr . '->' ftype                       (rule 50)
	ftype -> typeopr .                                  (rule 51)

	'->'           shift, and enter state 72
	'=>'           reduce using rule 51
	')'            reduce using rule 51
	','            reduce using rule 51
	NEWLINE        reduce using rule 51


State 37

	typeopr -> typeop . OPR typeopr                     (rule 52)
	typeopr -> typeop .                                 (rule 53)
	typeop -> typeop . OP typeapp                       (rule 54)

	OP             shift, and enter state 70
	OPR            shift, and enter state 71
	'->'           reduce using rule 53
	'=>'           reduce using rule 53
	')'            reduce using rule 53
	','            reduce using rule 53
	NEWLINE        reduce using rule 53


State 38

	typeop -> typeapp .                                 (rule 55)

	OP             reduce using rule 55
	OPR            reduce using rule 55
	'->'           reduce using rule 55
	'=>'           reduce using rule 55
	')'            reduce using rule 55
	','            reduce using rule 55
	NEWLINE        reduce using rule 55


State 39

	typelistAux -> typelistAux . singletype             (rule 57)
	typelist -> typelistAux .                           (rule 59)

	VAR            shift, and enter state 42
	OP             reduce using rule 59
	OPR            reduce using rule 59
	'|'            reduce using rule 59
	'->'           reduce using rule 59
	'=>'           reduce using rule 59
	')'            reduce using rule 59
	'('            shift, and enter state 43
	','            reduce using rule 59
	NEWLINE        reduce using rule 59

	singletype     goto state 69

State 40

	typeapp -> typelist .                               (rule 56)

	OP             reduce using rule 56
	OPR            reduce using rule 56
	'->'           reduce using rule 56
	'=>'           reduce using rule 56
	')'            reduce using rule 56
	','            reduce using rule 56
	NEWLINE        reduce using rule 56


State 41

	typelistAux -> singletype .                         (rule 58)

	VAR            reduce using rule 58
	OP             reduce using rule 58
	OPR            reduce using rule 58
	'|'            reduce using rule 58
	'->'           reduce using rule 58
	'=>'           reduce using rule 58
	')'            reduce using rule 58
	'('            reduce using rule 58
	','            reduce using rule 58
	NEWLINE        reduce using rule 58


State 42

	singletype -> VAR .                                 (rule 61)

	VAR            reduce using rule 61
	OP             reduce using rule 61
	OPR            reduce using rule 61
	'|'            reduce using rule 61
	'->'           reduce using rule 61
	'=>'           reduce using rule 61
	')'            reduce using rule 61
	'('            reduce using rule 61
	','            reduce using rule 61
	NEWLINE        reduce using rule 61


State 43

	singletype -> '(' . type ')'                        (rule 60)
	singletype -> '(' . ')'                             (rule 62)

	VAR            shift, and enter state 42
	')'            shift, and enter state 68
	'('            shift, and enter state 43

	type           goto state 67
	ftype          goto state 35
	typeopr        goto state 36
	typeop         goto state 37
	typeapp        goto state 38
	typelistAux    goto state 39
	typelist       goto state 40
	singletype     goto state 41

State 44

	varlistAux -> varlistAux . VAR                      (rule 37)
	varlist -> varlistAux .                             (rule 39)

	VAR            shift, and enter state 66
	'='            reduce using rule 39
	'=>'           reduce using rule 39
	','            reduce using rule 39
	NEWLINE        reduce using rule 39


State 45

	data -> DATA varlist . datarhs                      (rule 65)

	'='            shift, and enter state 64
	NEWLINE        shift, and enter state 65

	datarhs        goto state 63

State 46

	varlistAux -> VAR .                                 (rule 38)

	VAR            reduce using rule 38
	'='            reduce using rule 38
	'=>'           reduce using rule 38
	','            reduce using rule 38
	NEWLINE        reduce using rule 38


State 47

	class -> CLASS constrainedtype . NEWLINE indentedBody    (rule 64)

	NEWLINE        shift, and enter state 62


State 48

	def -> VAR exprlist . '=' rhs                       (rule 11)

	'='            shift, and enter state 61

